# tpt-nova

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  LICENSE  README.md  spec.txt  todo 1260710.md  todo.md
.github/workflows/: ci.yml
assets/: cube.glb  sample.splat
crates/nova-agent-api/: Cargo.toml
crates/nova-agent-api/examples/: agent_fix_loop.rs
crates/nova-agent-api/src/: lib.rs  llm.rs
crates/nova-anim/: Cargo.toml
crates/nova-anim/src/: lib.rs
crates/nova-app/: Cargo.toml  nova-telemetry.json
crates/nova-app/src/: main.rs
crates/nova-audio/: Cargo.toml
crates/nova-audio/src/: lib.rs  mixer.rs
crates/nova-ecs/: Cargo.toml
crates/nova-ecs/examples/: hello_world.rs
crates/nova-ecs/src/: camera.rs  component.rs  entity.rs  lib.rs  light.rs  math.rs  rng.rs  scene_graph.rs  scheduler.rs  storage.rs  transform.rs  world.rs
crates/nova-ecs/tests/: ecs_tests.rs
crates/nova-editor/: Cargo.toml
crates/nova-editor/examples/: editor_state.rs  inspect.rs
crates/nova-editor/src/: gizmo.rs  gizmo3d.rs  hierarchy.rs  inspector.rs  lib.rs  vibe.rs
crates/nova-export/: Cargo.toml
crates/nova-export/src/: lib.rs  main.rs
crates/nova-gameplay-example/: Cargo.toml
crates/nova-gameplay-example/src/: lib.rs
crates/nova-gameplay-example/tests/: hot_reload.rs
crates/nova-ingest/: Cargo.toml
crates/nova-ingest/examples/: gen_sample_assets.rs
crates/nova-ingest/src/: decompose.rs  lib.rs  loader.rs  physics.rs  rig.rs
crates/nova-input/: Cargo.toml
crates/nova-input/src/: lib.rs
crates/nova-neural-materials/: Cargo.toml
crates/nova-neural-materials/examples/: demo.rs
crates/nova-neural-materials/src/: binding.rs  frame.rs  lib.rs  prompt.rs  provider.rs  registry.rs  source.rs  texture.rs
crates/nova-overlay/: Cargo.toml
crates/nova-overlay/src/: lib.rs
crates/nova-physics/: Cargo.toml
crates/nova-physics/src/: components.rs  lib.rs
crates/nova-physics/tests/: integration.rs
crates/nova-rag/: Cargo.toml
crates/nova-rag/src/: embed.rs  index.rs  lib.rs
crates/nova-render/: Cargo.toml
crates/nova-render/examples/: headless_overview.rs  ui_draw_list.rs
crates/nova-render/src/: lib.rs  pbr.rs  sprite.rs  ui.rs
crates/nova-sample-game/: Cargo.toml  README.md
crates/nova-sample-game/src/: lib.rs  main.rs
crates/nova-scene/: Cargo.toml
crates/nova-scene/src/: lib.rs
crates/nova-scripting/: Cargo.toml
crates/nova-scripting-embedded/: Cargo.toml
crates/nova-scripting-embedded/examples/: sandbox.rs
crates/nova-scripting-embedded/src/: lib.rs
crates/nova-scripting/src/: lib.rs
crates/nova-scripting/tests/: abi_contract.rs
crates/nova-splat/: Cargo.toml
crates/nova-splat/src/: collider.rs  lib.rs  loader.rs  render.rs
crates/nova-telemetry/: Cargo.toml
crates/nova-telemetry/src/: lib.rs
crates/nova-telemetry/tests/: e2e_determinism.rs
crates/nova-ui/: Cargo.toml
crates/nova-ui/src/: lib.rs  world.rs
crates/nova-videocap/: Cargo.toml
crates/nova-videocap/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: AGENT_PROTOCOL.md  ALPHA_CHECKLIST.md  COOKBOOK.md
scripts/: fork_sample_game.ps1  scaffold_sample_game.ps1  scaffold_sample_game.sh
tools/: ai_loop.py
