[package]
name = "nova-agent-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Stable external-AI-agent control API for the TPT Nova engine (telemetry read + command apply loop)"

[dependencies]
nova-ecs = { workspace = true }
nova-telemetry = { workspace = true }
nova-rag = { workspace = true, optional = true }
glam = { version = "0.29", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[features]
default = []
# Exposes `rag`: a RAG-backed retrieval assistant wired into the agent loop.
rag = ["dep:nova-rag"]
