[package]
name = "nova-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "2D and 3D audio for TPT Nova: SFX one-shots, looping music, bus-based volume mixing, and positional (spatial) sources"

[dependencies]
rodio = "0.22"
log = "0.4"
