[package]
name = "nova-editor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TPT Nova scene/level editor v1: hierarchy, component inspector, 2D gizmos, and the Vibe GUI curve editor"

[dependencies]
nova-ecs = { workspace = true }
nova-physics = { workspace = true }
nova-ui = { workspace = true }
glam = { version = "0.29", features = ["std"] }
