[package]
name = "nova-gameplay-example"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Example hot-reloadable gameplay module: a player-controlled 2D entity"

# Built as a cdylib for the engine to hot-load at runtime, and as an rlib so the
# gameplay logic can be unit-tested directly in-process.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nova-ecs = { workspace = true }
nova-physics = { workspace = true }
nova-scripting = { workspace = true }
nova-input = { workspace = true }
glam = { version = "0.29", features = ["std"] }
