[package]
name = "nova-neural-materials"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Live video-LLM neural material feeds: API contract + streamed frame-to-texture mapping for TPT Nova"

[dependencies]
nova-ecs = { workspace = true }
wgpu = "30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
