[package]
name = "nova-overlay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Highlight & Fix viewport overlay tooling for TPT Nova: select a screen region and generate an AI fix prompt"

[dependencies]
nova-ecs = { workspace = true }
glam = { version = "0.29", features = ["std", "serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
