[package]
name = "nova-physics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rapier2D physics integration for TPT Nova's ECS (components + deterministic sync step)"

[dependencies]
nova-ecs = { workspace = true }
glam = { version = "0.29", features = ["std", "serde"] }
serde = { version = "1", features = ["derive"] }
rapier2d = "0.34"
