[package]
name = "nova-rag"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local vector-DB + RAG retrieval for TPT Nova: index project assets/docs and answer context queries"

[dependencies]
nova-ecs = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
