[package]
name = "nova-render"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "wgpu-based rendering for TPT Nova"

[dependencies]
nova-ecs = { workspace = true }
wgpu = "30"
winit = "0.30"
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = "1"
pollster = "0.3"
anyhow = "1"
log = "0.4"
