[package]
name = "nova-render"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "wgpu-based rendering for TPT Nova"

[dependencies]
nova-ecs = { workspace = true }
nova-ui = { workspace = true }
wgpu = "30"
winit = "0.30"
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = "1"
pollster = "0.3"
anyhow = "1"
log = "0.4"

[features]
default = []
# Wires a live `nova-neural-materials` feed onto in-scene surfaces: entities with
# a `MaterialBinding` get their latest decoded frame uploaded as an albedo texture.
neural = ["nova-neural-materials"]

[dependencies.nova-neural-materials]
workspace = true
optional = true
