[package]
name = "nova-scripting-embedded"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sandboxed, embedded (Rhai) scripting for TPT Nova, with capability boundaries for AI-generated scripts"

[dependencies]
nova-ecs = { workspace = true }
glam = { version = "0.29", features = ["std", "serde"] }
rhai = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
