[package]
name = "nova-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Structured JSON/MessagePack telemetry for TPT Nova's AI-observable engine state"

[dependencies]
nova-ecs = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

[dev-dependencies]
nova-physics = { workspace = true }
