[package]
name = "nova-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Immediate-mode 2D UI for TPT Nova: panels, buttons, and text emitted as a renderer-agnostic draw list"

[dependencies]
glam = { version = "0.29", features = ["std"] }
