[package]
name = "nova-videocap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Video-to-ECS ingestion for TPT Nova: depth map + segmentation mask -> collision proxies"

[dependencies]
nova-ecs = { workspace = true }
nova-ingest = { workspace = true }
glam = { version = "0.29", features = ["std"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
parry3d = "0.29"
